gap fix font fix

--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -17,10 +17,10 @@
 		background-size: cover;
 		border-bottom: 0 !important;
 		cursor: default;
-		height: 100vh;
+		min-height: 100vh;
 		// margin-bottom: -3.25em;
 		// max-height: 32em;
-		min-height: 22em;
+		// min-height: 22em;
 		position: relative;
 		margin-top: -3.25em;
 
@@ -135,9 +135,9 @@
 			@include padding(3em, 0, (2em, 0, 0, 0));
 			height: auto;
 			margin-bottom: -2.75em;
-			max-height: none;
-			min-height: 0;
-			top: -2.75em;
+			// max-height: none;
+			// min-height: 0;
+			margin-top: -2.75em;
 
 			h1 {
 				font-size: 2em;
